# dropper-giveaway-program

./: .gitignore  Anchor.toml  README.md  manager.json  owner.json  tsconfig.json  user.json
programs/dropper-giveaway/: Cargo.toml
programs/dropper-giveaway/src/: errors.rs  lib.rs
programs/dropper-giveaway/src/instructions/: claim_sol_giveaway.rs  claim_spl_giveaway.rs  create_sol_giveaway.rs  create_spl_giveaway.rs  mod.rs  payout_sol_giveaway.rs  payout_spl_giveaway.rs  repo_sol_giveaway.rs  repo_spl_giveaway.rs  set_sol_giveaway_winners.rs  set_spl_giveaway_winners.rs
programs/dropper-giveaway/src/state/: mod.rs  sol_giveaway.rs  spl_giveaway.rs  type_sizes.rs
tests/: dropper-giveaway.ts  sol-giveaway.ts  spl-giveaway.ts
tests/utils/: pdas.ts  program.ts  wallets.ts
